--- a/demo/eda-demo-after/test/EventDriven.ReferenceArchitecture.Specs/tye.yaml
+++ b/demo/eda-demo-after/test/EventDriven.ReferenceArchitecture.Specs/tye.yaml
@@ -9,20 +9,20 @@
 extensions:
   - name: dapr
     log-level: debug
-    components-path: "../../reference-architecture/dapr/components"
+    components-path: "../../src/dapr/components"
 
 # services
 name: eventdriven.reference-architecture
 services:
   - name: customerservice
-    project: ../../reference-architecture/CustomerService/CustomerService.csproj
+    project: ../../src/CustomerService/CustomerService.csproj
     bindings:
       - port: 5656
     env:
       - name: CustomerDatabaseSettings:DatabaseName
         value: CustomersTestDb
   - name: orderservice
-    project: ../../reference-architecture/OrderService/OrderService.csproj
+    project: ../../src/OrderService/OrderService.csproj
     bindings:
       - port: 5757
     env:
